syntax = "proto3";

package weni.rapidpro.classifier;

import "google/protobuf/empty.proto";

service ClassifierController {
    rpc Create(ClassifierCreateRequest) returns (Classifier) {}
    rpc Retrieve(ClassifierRetrieveRequest) returns (Classifier) {}
    rpc Destroy(ClassifierDestroyRequest) returns (google.protobuf.Empty) {}
    rpc List(ClassifierListRequest) returns (stream Classifier) {}
}

message ClassifierListRequest {
    string org_uuid = 1;
    bool is_active = 2;
    optional string classifier_type = 3;
}

message Classifier {
    string uuid = 1;
    string classifier_type = 2;
    string name = 3;
    string access_token = 4;
    bool is_active = 5;
}

message ClassifierCreateRequest {
    string org = 1;
    string user = 2;
    string classifier_type = 4;
    string name = 5;
    string access_token = 6;
}

message ClassifierRetrieveRequest {
    string uuid = 1;
}

message ClassifierDestroyRequest {
    string uuid = 1;
    string user_email = 2;
}
